Fix various layout issues on cash register pages

--- a/src/app/components/cash-register/order-item-card/order-item-card.component.scss
+++ b/src/app/components/cash-register/order-item-card/order-item-card.component.scss
@@ -27,6 +27,11 @@
 	background-color: var(--dav-color-surface-focus);
 }
 
+.order-item-card-id {
+	display: flex;
+	align-items: center;
+}
+
 .order-item-card-unit-price > p {
 	text-align: center;
 }
