--- a/src/app/pages/cash-register-pages/cash-register-page/cash-register-page.component.scss
+++ b/src/app/pages/cash-register-pages/cash-register-page/cash-register-page.component.scss
@@ -16,4 +16,5 @@
 	grid-row: 2;
 	height: 100%;
 	width: 100%;
+	min-height: 0;
 }
